[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/ship_builder.gd" id=1]

[node name="ShipBuilder" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.06, 0.12, 1)

[node name="Title" type="Label" parent="."]
anchor_left = 0.0
anchor_right = 1.0
anchor_top = 0.05
anchor_bottom = 0.05
offset_left = 0.0
offset_top = 10.0
offset_right = 0.0
offset_bottom = 50.0
text = "Ship Builder"
horizontal_alignment = 1

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.15
anchor_top = 0.2
anchor_right = 0.85
anchor_bottom = 0.8

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="WeaponLabel" type="Label" parent="Panel/VBox"]
text = "Weapon Level"

[node name="WeaponControls" type="HBoxContainer" parent="Panel/VBox"]

[node name="WeaponMinus" type="Button" parent="Panel/VBox/WeaponControls"]
text = "-"

[node name="WeaponValue" type="Label" parent="Panel/VBox/WeaponControls"]
text = "1"

[node name="WeaponPlus" type="Button" parent="Panel/VBox/WeaponControls"]
text = "+"

[node name="WingLabel" type="Label" parent="Panel/VBox"]
text = "Wing Level"

[node name="WingControls" type="HBoxContainer" parent="Panel/VBox"]

[node name="WingMinus" type="Button" parent="Panel/VBox/WingControls"]
text = "-"

[node name="WingValue" type="Label" parent="Panel/VBox/WingControls"]
text = "1"

[node name="WingPlus" type="Button" parent="Panel/VBox/WingControls"]
text = "+"

[node name="HullLabel" type="Label" parent="Panel/VBox"]
text = "Hull Style"

[node name="HullControls" type="HBoxContainer" parent="Panel/VBox"]

[node name="HullPrev" type="Button" parent="Panel/VBox/HullControls"]
text = "<"

[node name="HullValue" type="Label" parent="Panel/VBox/HullControls"]
text = "A"

[node name="HullNext" type="Button" parent="Panel/VBox/HullControls"]
text = ">"

[node name="ConfirmButton" type="Button" parent="Panel/VBox"]
text = "Confirm Loadout"

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.4
anchor_right = 0.6
anchor_top = 0.86
anchor_bottom = 0.86
offset_top = 0.0
offset_bottom = 40.0
text = "Back"
